add notebook week3

--- a/week3/Face_segmentation.ipynb
+++ b/week3/Face_segmentation.ipynb
@@ -47,11 +47,11 @@
         "deletable": true,
         "editable": true,
         "id": "7zyay1nHL93c",
+        "outputId": "2edb6088-22fc-4e5d-d21a-1c2ca0c27d63",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 252
-        },
-        "outputId": "c24e4dc9-437c-4c76-f3bf-d6bbcc67e418"
+          "height": 292
+        }
       },
       "cell_type": "code",
       "source": [
@@ -61,21 +61,22 @@
         "from setup_google_colab import setup_week3\n",
         "setup_week3()"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2019-03-20 19:06:22--  https://raw.githubusercontent.com/DmitriiDenisov/intro_dl_seminars/master/setup_colab.py\n",
+            "shred: setup_google_colab.py: failed to open for writing: No such file or directory\n",
+            "--2019-03-20 20:12:14--  https://raw.githubusercontent.com/DmitriiDenisov/intro_dl_seminars/master/setup_colab.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1109 (1.1K) [text/plain]\n",
             "Saving to: ‘setup_google_colab.py’\n",
             "\n",
-            "\rsetup_google_colab.   0%[                    ]       0  --.-KB/s               \rsetup_google_colab. 100%[===================>]   1.08K  --.-KB/s    in 0s      \n",
+            "setup_google_colab. 100%[===================>]   1.08K  --.-KB/s    in 0s      \n",
             "\n",
-            "2019-03-20 19:06:22 (141 MB/s) - ‘setup_google_colab.py’ saved [1109/1109]\n",
+            "2019-03-20 20:12:20 (162 MB/s) - ‘setup_google_colab.py’ saved [1109/1109]\n",
             "\n",
             "week3\n",
             "/content\n"
@@ -85,7 +86,7 @@
         {
           "output_type": "stream",
           "text": [
-            "data.zip: 100%|██████████| 302M/302M [00:08<00:00, 34.0MB/s]\n"
+            "data.zip: 100%|██████████| 302M/302M [00:19<00:00, 15.6MB/s]\n"
           ],
           "name": "stderr"
         }
@@ -95,11 +96,11 @@
       "metadata": {
         "id": "22LSL6XQgTdb",
         "colab_type": "code",
+        "outputId": "5930d018-d63b-4730-e08e-a0cd4f63c018",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5876d467-30e3-4057-ab43-a6e27de454df"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -120,7 +121,7 @@
         "os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"\n",
         "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"\""
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,11 +136,11 @@
       "metadata": {
         "id": "RF9jxXkXgmQa",
         "colab_type": "code",
+        "outputId": "f2f34c1c-885c-4868-ac1a-4f35d6de4cb9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
-        },
-        "outputId": "25c61091-6967-4ea4-d0eb-44f54c54cd29"
+          "height": 71
+        }
       },
       "cell_type": "code",
       "source": [
@@ -157,7 +158,7 @@
         "masks = [np.array(load_img(join(masks_dir, f), grayscale=True)) / 255\n",
         "               for f in listdir(masks_dir) if isfile(join(masks_dir, f))]\n"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +186,9 @@
         "train_images = np.array([images[i] for i in train_obs])\n",
         "train_masks = np.array([masks[i].reshape(img_size_target + (1,)) for i in train_obs])\n",
         "valid_images = np.array([images[i] for i in valid_obs])\n",
-        "valid_masks = np.array([masks[i].reshape(img_size_target + (1,)) for i in valid_obs])"
+        "valid_masks = np.array([masks[i].reshape(img_size_target + (1,)) for i in valid_obs])\n",
+        "\n",
+        "del masks, images, train_obs, valid_obs"
       ],
       "execution_count": 0,
       "outputs": []
@@ -456,11 +459,11 @@
       "metadata": {
         "id": "niwFu7qLmkbY",
         "colab_type": "code",
+        "outputId": "578ed0ae-13d9-432f-9739-417c3c9b4672",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 185
-        },
-        "outputId": "c95efa21-9455-45cf-926e-a30709410bea"
+          "height": 187
+        }
       },
       "cell_type": "code",
       "source": [
@@ -477,7 +480,7 @@
         "                         key= lambda x: -x[1])[:10]:\n",
         "    print(\"{:>30}: {:>8}\".format(name,sizeof_fmt(size)))"
       ],
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -486,12 +489,12 @@
             "                   train_masks: 699.0MiB\n",
             "                  valid_images: 523.8MiB\n",
             "                   valid_masks: 174.6MiB\n",
-            "                        images:  12.7KiB\n",
-            "                         masks:  12.7KiB\n",
-            "                     train_obs:   9.4KiB\n",
             "                          _iii:   4.8KiB\n",
-            "                           _i6:   4.8KiB\n",
-            "                     valid_obs:   2.4KiB\n"
+            "                           _i9:   4.8KiB\n",
+            "                            _i:   2.0KiB\n",
+            "                          _i11:   2.0KiB\n",
+            "                         Model:   1.0KiB\n",
+            "                       Dropout:   1.0KiB\n"
           ],
           "name": "stdout"
         }
@@ -501,21 +504,21 @@
       "metadata": {
         "id": "E0_sFwQ1kws4",
         "colab_type": "code",
+        "outputId": "e93a9012-ca01-4a17-8879-f6910d1ff8c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 50
-        },
-        "outputId": "f0ab4945-7bac-4c2c-e306-ce64c39447cf"
+          "height": 51
+        }
       },
       "cell_type": "code",
       "source": [
         "\n",
         "# Data augmentation\n",
-        "# train_images = np.append(train_images, [np.fliplr(x) for x in train_images], axis=0)\n",
+        "train_images = np.append(train_images, [np.fliplr(x) for x in train_images], axis=0)\n",
         "#del train_images\n",
         "\n",
         "\n",
-        "# train_masks = np.append(train_masks, [np.fliplr(x) for x in train_masks], axis=0)\n",
+        "train_masks = np.append(train_masks, [np.fliplr(x) for x in train_masks], axis=0)\n",
         "#del train_masks\n",
         "\n",
         "# x_train2 = train_images\n",
@@ -530,13 +533,13 @@
         "print(train_images.shape)\n",
         "print(train_masks.shape)"
       ],
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(1193, 320, 240, 3)\n",
-            "(1193, 320, 240, 1)\n"
+            "(2386, 320, 240, 3)\n",
+            "(2386, 320, 240, 1)\n"
           ],
           "name": "stdout"
         }
@@ -568,11 +571,11 @@
       "metadata": {
         "id": "5PdJ0RsxkxZh",
         "colab_type": "code",
+        "outputId": "a364b4b5-0ed7-453c-c45b-66307a396650",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 2755
-        },
-        "outputId": "66719b0c-fac8-43ba-c692-274c1023c78b"
+          "height": 2788
+        }
       },
       "cell_type": "code",
       "source": [
@@ -593,7 +596,7 @@
         "reduce_lr = ReduceLROnPlateau(monitor='val_loss', mode='min', factor=0.2, patience=3, min_lr=0.00001, verbose=1)\n",
         "#reduce_lr = ReduceLROnPlateau(factor=0.2, patience=5, min_lr=0.00001, verbose=1)\n"
       ],
-      "execution_count": 20,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,11 +773,11 @@
       "metadata": {
         "id": "FHIqJ6NhkxXW",
         "colab_type": "code",
+        "outputId": "41e5a43e-a6a9-437d-fc56-5efbe09666fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "844a647a-fbb2-4bf4-84c6-7eea2ecf427f"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -783,12 +786,12 @@
         "\n",
         "print(train_images.shape)"
       ],
-      "execution_count": 21,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(1193, 320, 240, 3)\n"
+            "(2386, 320, 240, 3)\n"
           ],
           "name": "stdout"
         }
@@ -798,11 +801,11 @@
       "metadata": {
         "id": "D_AujLkBliR9",
         "colab_type": "code",
+        "outputId": "146f9fa8-c0fe-490b-e5d7-6dc05f3732f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 870
-        },
-        "outputId": "bf0a8847-6748-474a-f5e5-18e95ac1f315"
+          "height": 68
+        }
       },
       "cell_type": "code",
       "source": [
@@ -814,32 +817,16 @@
         "                    verbose=1)\n",
         "print('Fitted!')"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train on 1193 samples, validate on 298 samples\n",
+            "Train on 2386 samples, validate on 298 samples\n",
             "Epoch 1/50\n",
-            "  48/1193 [>.............................] - ETA: 36:02 - loss: 1.6761 - dice_coef_K: -0.7261"
+            "  16/2386 [..............................] - ETA: 1:06:31 - loss: 1.7209 - dice_coef_K: -0.7204"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-22-aab349e5ccc5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m                     \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                     \u001b[0mcallbacks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmodel_checkpoint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduce_lr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m#[early_stopping, reduce_lr],\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m                     verbose=1)\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Fitted!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, **kwargs)\u001b[0m\n\u001b[1;32m   1037\u001b[0m                                         \u001b[0minitial_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minitial_epoch\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1038\u001b[0m                                         \u001b[0msteps_per_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msteps_per_epoch\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1039\u001b[0;31m                                         validation_steps=validation_steps)\n\u001b[0m\u001b[1;32m   1040\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1041\u001b[0m     def evaluate(self, x=None, y=None,\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/engine/training_arrays.py\u001b[0m in \u001b[0;36mfit_loop\u001b[0;34m(model, f, ins, out_labels, batch_size, epochs, verbose, callbacks, val_f, val_ins, shuffle, callback_metrics, initial_epoch, steps_per_epoch, validation_steps)\u001b[0m\n\u001b[1;32m    197\u001b[0m                     \u001b[0mins_batch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mins_batch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    198\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 199\u001b[0;31m                 \u001b[0mouts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mins_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    200\u001b[0m                 \u001b[0mouts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mto_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mouts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    201\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mo\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mouts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m   2713\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_legacy_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2714\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2715\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2716\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2717\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mpy_any\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mis_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py\u001b[0m in \u001b[0;36m_call\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m   2673\u001b[0m             \u001b[0mfetched\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_callable_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0marray_vals\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_metadata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2674\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2675\u001b[0;31m             \u001b[0mfetched\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_callable_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0marray_vals\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2676\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mfetched\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2677\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1437\u001b[0m           ret = tf_session.TF_SessionRunCallable(\n\u001b[1;32m   1438\u001b[0m               \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_handle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstatus\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1439\u001b[0;31m               run_metadata_ptr)\n\u001b[0m\u001b[1;32m   1440\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1441\u001b[0m           \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
         }
       ]
     },
