--- a/week3/Faces_segmentation.ipynb
+++ b/week3/Faces_segmentation.ipynb
@@ -7,7 +7,8 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -17,6 +18,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/DmitriiDenisov/intro_dl_seminars/blob/master/week3/Faces_segmentation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "metadata": {
         "colab_type": "text",
@@ -395,6 +406,18 @@
         "Accuracy(A,B)\n",
         "&= \\frac{|A\\cdot B|+|\\overline{A} \\cdot \\overline{B}|}{|All|} \\\\\n",
         "\\end{align*}"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "ZNyDqu8-mTcf",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "<img src=\" https://www.invicro.com/wp-content/uploads/2016/09/metrics.png\" alt=\"Drawing\" style=\"width: 700px;\"/> \n",
+        "\n"
       ]
     },
     {
